--- a/index.html
+++ b/index.html
@@ -1,142 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>A Place to Just Be</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Inspiration Space</title>
+
+  <!-- Styles -->
   <style>
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
-      font-family: 'Georgia', serif;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0d0d2b;
+      color: white;
       overflow: hidden;
-      background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-      color: #e0e0e0;
     }
 
-    #stars, #stars2, #stars3 {
-      position: absolute;
+    #particles-js {
+      position: fixed;
       width: 100%;
       height: 100%;
-      background: transparent;
-      display: block;
       z-index: -1;
-    }
-
-    #stars {
-      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/stars.png') repeat;
-      animation: moveStars 200s linear infinite;
-    }
-
-    #stars2 {
-      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/stars2.png') repeat;
-      animation: moveStars 400s linear infinite;
-    }
-
-    #stars3 {
-      background: url('https://raw.githubusercontent.com/VincentGarreau/particles.js/master/demo/media/stars3.png') repeat;
-      animation: moveStars 600s linear infinite;
-    }
-
-    @keyframes moveStars {
-      from { background-position: 0 0; }
-      to { background-position: -10000px 5000px; }
+      top: 0;
+      left: 0;
+      background-color: #0d0d2b;
     }
 
     .container {
-      position: relative;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 90%;
+      max-width: 600px;
       text-align: center;
-      padding: 20px;
-      z-index: 1;
     }
 
     h1 {
-      font-size: 1.8rem;
-      margin-bottom: 10px;
-    }
-
-    p {
-      color: #ccc;
-      font-size: 1rem;
+      font-weight: 300;
+      font-size: 2em;
+      margin-bottom: 20px;
     }
 
     textarea {
-      width: 80%;
-      max-width: 700px;
-      height: 250px;
-      background-color: rgba(44, 44, 44, 0.7);
-      color: #e0e0e0;
+      width: 100%;
+      height: 200px;
+      padding: 15px;
+      font-size: 1em;
       border: none;
-      padding: 20px;
-      font-size: 1rem;
+      border-radius: 10px;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
       resize: none;
+      backdrop-filter: blur(5px);
       outline: none;
-      border-radius: 8px;
-      margin-top: 20px;
-    }
-
-    .note {
-      margin-top: 20px;
-      font-size: 0.9rem;
-      color: #aaa;
     }
 
     audio {
-      display: none;
-    }
-
-    footer {
-      position: absolute;
-      bottom: 10px;
-      font-size: 0.75rem;
-      color: #666;
-      text-align: center;
-      width: 100%;
-    }
-
-    footer a {
-      color: #888;
-      text-decoration: none;
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
     }
   </style>
 </head>
 <body>
-  <!-- Starry Background Layers -->
-  <div id="stars"></div>
-  <div id="stars2"></div>
-  <div id="stars3"></div>
 
+  <!-- Star background -->
+  <div id="particles-js"></div>
+
+  <!-- Main content -->
   <div class="container">
-    <h1>you're safe here.</h1>
-    <p>type what you feel. no one will read it. not even the page.</p>
-    <textarea placeholder="just type. let it out... nothing will be saved. this is your moment."></textarea>
-    <div class="note">refresh to clear. this space doesn’t keep anything.</div>
-
-    <!-- Background Music -->
-    <audio id="bg-music" autoplay loop>
-      <source src="nature.mp3" type="audio/mp3">
-      Your browser does not support the audio element.
-    </audio>
+    <h1>Just Be Here</h1>
+    <textarea placeholder="Type what you're feeling..."></textarea>
   </div>
 
-  <!-- Autoplay after click (required by most browsers) -->
+  <!-- Background music -->
+  <audio autoplay loop>
+    <source src="nature.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <!-- Particle.js CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+
+  <!-- Load particles config -->
   <script>
-    document.body.addEventListener('click', () => {
-      const music = document.getElementById('bg-music');
-      if (music.paused) music.play();
+    particlesJS.load('particles-js', 'particles.json', function() {
+      console.log('particles.json loaded');
     });
   </script>
 
-  <!-- Credit Section -->
-  <footer>
-    Music: “Luminous Rain” by Kevin MacLeod (<a href="https://incompetech.com" target="_blank">incompetech.com</a>)<br>
-    Licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0</a>
-  </footer>
 </body>
 </html>
