--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Inspiration Space</title>
-
-  <!-- Styles -->
+  <title>Breathe Here</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      font-family: 'Segoe UI', sans-serif;
-      background: #0d0d2b;
-      color: white;
       overflow: hidden;
+      font-family: 'Segoe UI', sans-serif;
+      background: #000;
+      color: white;
+      height: 100%;
     }
 
     #particles-js {
@@ -22,74 +20,63 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-      top: 0;
-      left: 0;
-      background-color: #0d0d2b;
     }
 
-    .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      max-width: 600px;
+    .content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      padding: 20px;
       text-align: center;
-    }
-
-    h1 {
-      font-weight: 300;
-      font-size: 2em;
-      margin-bottom: 20px;
+      z-index: 1;
     }
 
     textarea {
-      width: 100%;
-      height: 200px;
+      width: 80%;
+      max-width: 600px;
+      height: 150px;
       padding: 15px;
-      font-size: 1em;
       border: none;
       border-radius: 10px;
-      background: rgba(255, 255, 255, 0.1);
+      background-color: rgba(255, 255, 255, 0.1);
       color: white;
+      font-size: 1.2em;
       resize: none;
       backdrop-filter: blur(5px);
       outline: none;
     }
 
+    h1 {
+      margin-bottom: 20px;
+      font-weight: 300;
+    }
+
     audio {
-      position: fixed;
-      bottom: 20px;
-      left: 20px;
+      display: none;
     }
   </style>
 </head>
 <body>
 
-  <!-- Star background -->
   <div id="particles-js"></div>
 
-  <!-- Main content -->
-  <div class="container">
-    <h1>Just Be Here</h1>
+  <div class="content">
+    <h1>Just be here.</h1>
     <textarea placeholder="Type what you're feeling..."></textarea>
+    <audio autoplay loop>
+      <source src="nature.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
   </div>
 
-  <!-- Background music -->
-  <audio autoplay loop>
-    <source src="nature.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-
-  <!-- Particle.js CDN -->
+  <!-- Particles.js library -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
-
-  <!-- Load particles config -->
   <script>
     particlesJS.load('particles-js', 'particles.json', function() {
-      console.log('particles.json loaded');
+      console.log('✨ Starry background loaded!');
     });
   </script>
-
 </body>
 </html>
