--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Breathe Here</title>
+  <title>Just Breathe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
@@ -71,12 +71,9 @@
     </audio>
   </div>
 
-  <!-- Particles.js library -->
+  <!-- Load particles.js and your script -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
-  <script>
-    particlesJS.load('particles-js', 'particles.json', function() {
-      console.log('✨ Starry background loaded!');
-    });
-  </script>
+  <script src="script.js"></script>
+
 </body>
 </html>
