--- a/index.html
+++ b/index.html
@@ -6,62 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
+      margin: 0; padding: 0; overflow: hidden;
+      background: #000; color: white; height: 100%;
       font-family: 'Segoe UI', sans-serif;
-      background: #000;
-      color: white;
-      height: 100%;
     }
-
     #particles-js {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
+      position: fixed; top: 0; left: 0;
+      width: 100%; height: 100%; z-index: -1;
     }
-
     .content {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      padding: 20px;
-      text-align: center;
-      z-index: 1;
+      display: flex; flex-direction: column;
+      justify-content: center; align-items: center;
+      height: 100vh; padding: 20px;
+      text-align: center; z-index: 1;
     }
-
     textarea {
-      width: 80%;
-      max-width: 600px;
-      height: 150px;
-      padding: 15px;
-      border: none;
+      width: 80%; max-width: 600px;
+      height: 150px; padding: 15px;
+      font-size: 1.2em; border: none;
       border-radius: 10px;
-      background-color: rgba(255, 255, 255, 0.1);
-      color: white;
-      font-size: 1.2em;
-      resize: none;
+      background-color: rgba(255,255,255,0.1);
+      color: white; resize: none;
       backdrop-filter: blur(5px);
       outline: none;
     }
-
-    h1 {
-      margin-bottom: 20px;
-      font-weight: 300;
-    }
-
-    audio {
-      display: none;
-    }
+    h1 { margin-bottom: 20px; font-weight: 300; }
+    audio { display: none; }
   </style>
 </head>
 <body>
-
   <div id="particles-js"></div>
-
   <div class="content">
     <h1>Just be here.</h1>
     <textarea placeholder="Type what you're feeling..."></textarea>
@@ -70,10 +44,9 @@
       Your browser does not support the audio element.
     </audio>
   </div>
-
-  <!-- Load particles.js and your script -->
+  <!-- Load particles.js library -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+  <!-- Initialize particles using script.js -->
   <script src="script.js"></script>
-
 </body>
 </html>
