--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       outline: none;
     }
     h1 { margin-bottom: 20px; font-weight: 300; }
-    audio { display: none; }
+    audio { display: nature.mp3; }
   </style>
 </head>
 <body>
