--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Just Breathe</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     html, body {
       margin: 0; padding: 0; overflow: hidden;
@@ -30,23 +30,31 @@
       backdrop-filter: blur(5px);
       outline: none;
     }
-    h1 { margin-bottom: 20px; font-weight: 300; }
-    audio { display: nature.mp3; }
+    h1 {
+      margin-bottom: 20px; font-weight: 300;
+    }
+    audio { display: none; }
   </style>
 </head>
 <body>
+
   <div id="particles-js"></div>
+
   <div class="content">
     <h1>Just be here.</h1>
     <textarea placeholder="Type what you're feeling..."></textarea>
-    <audio autoplay loop>
+
+    <!-- Background music muted at first -->
+    <audio id="bg-audio" autoplay loop muted>
       <source src="nature.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
     </audio>
   </div>
-  <!-- Load particles.js library -->
+
+  <!-- Load particles.js -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
-  <!-- Initialize particles using script.js -->
+  <!-- Your custom script -->
   <script src="script.js"></script>
+
 </body>
 </html>
